--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt" data-ng-app="app">
+<html lang="pt" data-ng-app="dog.app">
 <head>
     <meta charset="UTF-8">
     <title>Dog do Sítio</title>
@@ -17,8 +17,12 @@
     <script src="/js/vendor/bootstrap-4.0.0.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <!-- App -->
-    <script src="/js/app.js"></script>
+    <!-- Font Awesome -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+
+    <!-- Angular App -->
+    <script src="/js/dog.app.js"></script>
+    <script src="/js/dog.service.product.js"></script>
 </head>
 <body>
 
@@ -40,19 +44,100 @@
         </div>
     </nav>
 
-    <div class="container" data-ng-controller="TestOrderController">
-        <ul class="list-group">
-            <li data-ng-repeat="order in orders" class="list-group-item d-flex justify-content-between align-items-center">
-                <div>
-                    <div>
-                        <span>Pedido #{{order.id}}</span>
-                        <span class="badge badge-primary badge-pill">{{countProducts(order)}} itens</span>
-                    </div>
-                    <div><small>de {{order.client.name}}, feito em {{order.date | date:'dd/MM/yyyy HH:mm:ss'}}</small></div>
+
+    <div class="container" data-ng-controller="ProductListController">
+
+        <div class="row">
+            <div class="col-sm">
+                <ul class="list-group">
+                    <li data-ng-repeat="product in products" class="list-group-item d-flex justify-content-between align-items-center">
+                        <div>
+                            <div>
+                                <span>{{product.id}} - {{product.name}}</span>
+                                <small>(adicionado em {{product.creationDate | date:'dd/MM/yyyy HH:mm:ss'}})</small>
+                            </div>
+                            <div><small>{{product.description}}</small></div>
+                        </div>
+                        <div>
+                            <span class="badge badge-primary badge-pill">{{product.price | currency}}</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col-sm">
+                <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#newProductModal" data-ng-click="handleNewProduct()"><i class="fas fa-plus-circle"></i> Adicionar produto</button>
+            </div>
+        </div>
+
+
+        <!--
+        <div class="row">
+            <form>
+                <div class="form-group">
+                    <label for="product-name" class="col-form-label">Nome:</label>
+                    <input id="product-name" type="text" class="form-control" dta-ng-model="newProduct.name">
                 </div>
-            </li>
-        </ul>
+                <div class="form-group">
+                    <label for="product-description" class="col-form-label">Descrição:</label>
+                    <textarea id="product-description" class="form-control" dta-ng-model="newProduct.description"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="product-price" class="col-form-label">Preço:</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">R$</span>
+                        </div>
+                        <input id="product-price" type="number" value="1.00" min="0" step="0.10" class="form-control currency" dta-ng-model="newProduct.price"/>
+                    </div>
+                </div>
+                <button type="button" class="btn btn-primary" data-ng-click="save(newProduct)">Adicionar</button>
+            </form>
+        </div>
+        -->
+
+        <div class="modal fade" id="newProductModal" tabindex="-1" role="dialog" aria-labelledby="newProductModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="newProductModalLabel">Novo produto</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="product-name" class="col-form-label">Nome:</label>
+                                <input id="product-name" type="text" class="form-control" dta-ng-model="newProduct.name">
+                            </div>
+                            <div class="form-group">
+                                <label for="product-description" class="col-form-label">Descrição:</label>
+                                <textarea id="product-description" class="form-control" dta-ng-model="newProduct.description"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="product-price" class="col-form-label">Preço:</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text">R$</span>
+                                    </div>
+                                    <input id="product-price" type="number" value="1.00" min="0" step="0.10" class="form-control currency" dta-ng-model="newProduct.price"/>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-ban"></i> Cancelar</button>
+                        <button type="button" class="btn btn-primary" data-ng-click="save(newProduct)"><i class="fas fa-save"></i> Adicionar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
 
 </body>
 </html>
