--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,98 +24,155 @@
     <!-- Angular App -->
     <script src="/js/dog.app.js"></script>
     <script src="/js/dog.service.product.js"></script>
+    <link rel="stylesheet" href="/css/dog.css"/>
 </head>
-<body>
+<body data-ng-cloak>
 
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4"><img src="img/lettering.png" alt="Dog do Sítio"/></h1>
-            <p class="lead">Futuro front-end do sistema para o Dog do Sítio em <a href="https://getbootstrap.com/docs/4.0/components" target="_blank">Bootstrap</a> e <a href="https://docs.angularjs.org/api" target="_blank">AngularJs</a>...</p>
-        </div>
-    </div>
+    <header data-ng-controller="HeaderController">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white">
+            <a class="navbar-brand" href="#"><img src="/img/lettering.png" alt="Dog do Sítio"/></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-    <nav aria-label="breadcrumb" data-ng-controller="TestBreadcrumbController">
-        <div class="container">
-            <ol class="breadcrumb">
-                <li data-ng-repeat="item in items" class="breadcrumb-item {{item.active ? 'active' : ''}}">
-                    <a href="{{item.url}}" data-ng-if="!item.active">{{item.label}}</a>
-                    <span data-ng-if="item.active">{{item.label}}</span>
-                </li>
-            </ol>
-        </div>
-    </nav>
-
-
-    <div class="container" data-ng-controller="ProductListController">
-
-        <div class="row">
-            <div class="col-sm">
-                <ul class="list-group">
-                    <li data-ng-repeat="product in products" class="list-group-item d-flex justify-content-between align-items-center">
-                        <div>
-                            <div>
-                                <span>{{product.id}} - {{product.name}}</span>
-                                <small>(adicionado em {{product.creationDate | date:'dd/MM/yyyy HH:mm:ss'}})</small>
-                            </div>
-                            <div><small>{{product.description}}</small></div>
-                        </div>
-                        <div>
-                            <span class="badge badge-primary badge-pill">{{product.price | currency}}</span>
-                        </div>
-                        <div>
-                            <button type="button" class="btn btn-primary" data-ng-click="delete(product.id)"><i class="fas fa-trash-alt"></i> Excluir</button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
                         </div>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">Disabled</a>
+                    </li>
                 </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+
+        <div id="jumbotron-banner" class="jumbotron jumbotron-fluid dog-bg-header">
+            <div class="container text-center">
+                <!--
+                <div class="col-md-5 p-lg-5 mx-auto my-5 text-white">
+                    <h1 class="display-4 font-weight-normal">Um textinho</h1>
+                    <p class="lead font-weight-normal">Um textinho de apresentação e boas vindas. Lero lero lero lero e tal e côsa, bla bla bla e enxeção de linguiça...</p>
+                </div>
+                -->
+                <!--
+                <h1 class="display-4"><img src="img/lettering.png" alt="Dog do Sítio"/></h1>
+                <p class="lead">Altura de <span data-ng-bind="bannerHeight"></span>px</p>
+                -->
             </div>
         </div>
+    </header>
 
-        <div class="row mt-2">
-            <div class="col-sm">
-                <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#editingProductModal"><i class="fas fa-plus-circle"></i> Adicionar produto</button>
+    <main>
+
+        <nav aria-label="breadcrumb" data-ng-controller="TestBreadcrumbController">
+            <div class="container">
+                <ol class="breadcrumb">
+                    <li data-ng-repeat="item in items" class="breadcrumb-item {{item.active ? 'active' : ''}}">
+                        <a href="{{item.url}}" data-ng-if="!item.active">{{item.label}}</a>
+                        <span data-ng-if="item.active">{{item.label}}</span>
+                    </li>
+                </ol>
             </div>
-        </div>
+        </nav>
 
-        <div class="modal fade" id="editingProductModal" tabindex="-1" role="dialog" aria-labelledby="editingProductModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="editingProductModalLabel">Novo produto</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form action="#">
-                            <div class="form-group">
-                                <label for="product-name" class="col-form-label">Nome:</label>
-                                <input id="product-name" type="text" class="form-control" data-ng-model="editingProduct.name">
-                            </div>
-                            <div class="form-group">
-                                <label for="product-description" class="col-form-label">Descrição:</label>
-                                <textarea id="product-description" class="form-control" data-ng-model="editingProduct.description"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <label for="product-price" class="col-form-label">Preço:</label>
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text">R$</span>
-                                    </div>
-                                    <input id="product-price" type="number" min="0" step="0.10" placeholder="0,00" class="form-control currency" data-ng-model="editingProduct.price"/>
+
+        <div class="container" data-ng-controller="ProductListController">
+            <div class="row">
+                <div class="col-sm">
+                    <ul class="list-group">
+                        <li data-ng-repeat="product in products" class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <div>
+                                    <span>{{product.id}} - {{product.name}}</span>
+                                    <small>(adicionado em {{product.creationDate | date:'dd/MM/yyyy HH:mm:ss'}})</small>
                                 </div>
+                                <div><small>{{product.description}}</small></div>
                             </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-ban"></i> Cancelar</button>
-                        <button type="submit" class="btn btn-primary" data-ng-click="save(editingProduct)"><i class="fas fa-save"></i> Adicionar</button>
+                            <div>
+                                <span class="badge badge-warning badge-pill">{{product.price | currency}}</span>
+                            </div>
+                            <div>
+                                <button type="button" class="btn btn-warning" data-ng-click="delete(product.id)"><i class="fas fa-trash-alt"></i> Excluir</button>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row mt-2">
+                <div class="col-sm">
+                    <button type="button" class="btn btn-warning float-right" data-toggle="modal" data-target="#editingProductModal"><i class="fas fa-plus-circle"></i> Adicionar produto</button>
+                </div>
+            </div>
+
+            <div class="modal fade" id="editingProductModal" tabindex="-1" role="dialog" aria-labelledby="editingProductModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="editingProductModalLabel">Novo produto</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <form action="#">
+                                <div class="form-group">
+                                    <label for="product-name" class="col-form-label">Nome:</label>
+                                    <input id="product-name" type="text" class="form-control" data-ng-model="editingProduct.name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="product-description" class="col-form-label">Descrição:</label>
+                                    <textarea id="product-description" class="form-control" data-ng-model="editingProduct.description"></textarea>
+                                </div>
+                                <div class="form-group">
+                                    <label for="product-price" class="col-form-label">Preço:</label>
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">R$</span>
+                                        </div>
+                                        <input id="product-price" type="number" min="0" step="0.10" placeholder="0,00" class="form-control currency" data-ng-model="editingProduct.price"/>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-ban"></i> Cancelar</button>
+                            <button type="submit" class="btn btn-warning" data-ng-click="save(editingProduct)"><i class="fas fa-save"></i> Adicionar</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </main>
 
-    </div>
-
+    <footer class="bg-warning py-5 mt-5">
+        <div class="container">
+            <p class="float-right warning-link">
+                <a href="#">Back to top</a>
+            </p>
+            <p>Dog do Sítio © 2017-2018</p>
+            <p>Futuro front-end do sistema para o Dog do Sítio em <a href="https://getbootstrap.com/docs/4.0/components" target="_blank">Bootstrap</a> e <a href="https://docs.angularjs.org/api" target="_blank">AngularJs</a>...</p>
+        </div>
+    </footer>
 
 </body>
 </html>
